--- a/client/pc/package.json
+++ b/client/pc/package.json
@@ -30,9 +30,7 @@
     "@tweenjs/tween.js": "^17.2.0",
     "cannon": "^0.6.2",
     "three": "^0.86.0",
-    "webrtc-adapter": "^6.1.5",
-    "webvr-polyfill": "^0.10.6",
-    "ws": "^5.1.1"
+    "webrtc-adapter": "^6.1.5"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
@@ -48,7 +46,6 @@
     "file-loader": "^1.1.6",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
-    "nodemon": "^1.17.3",
     "postcss-cssnext": "^3.1.0",
     "postcss-loader": "^2.1.4",
     "shader-loader": "^1.3.0",
