--- a/client/pc/package.json
+++ b/client/pc/package.json
@@ -3,10 +3,8 @@
   "version": "3.3.0",
   "description": "A webvr chatroom project for three.js",
   "scripts": {
-    "start": "npm run client & npm run server",
-    "client": "NODE_ENV=development webpack-dev-server --mode development --config ./client/webpack.config.js",
-    "server": "nodemon server/app.js --watch server",
-    "build": "NODE_ENV=production webpack --mode production --config ./client/webpack.config.js"
+    "start": "NODE_ENV=development webpack-dev-server --mode development --config ./webpack.config.js",
+    "build": "NODE_ENV=production webpack --mode production --config ./webpack.config.js"
   },
   "repository": {
     "type": "git",
@@ -29,6 +27,7 @@
   "dependencies": {
     "@tweenjs/tween.js": "^17.2.0",
     "cannon": "^0.6.2",
+    "qrcode": "^1.3.0",
     "three": "^0.86.0",
     "webrtc-adapter": "^6.1.5"
   },
@@ -52,7 +51,7 @@
     "style-loader": "^0.13.2",
     "url-loader": "^0.5.8",
     "webpack": "^4.5.0",
-    "webpack-cli": "^2.0.14",
+    "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.3"
   }
 }
